fix page-link color invisible bug

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -16,7 +16,7 @@ body {
 }
 
 .site-nav .page-link {
-	color: #fff;
+	color: #418EF5;
 }
 
 .post-link {
